# Chromadvisor

./: .copier-answers.yml  LICENSE  README.md  pyproject.toml  tox.ini
docs/source/: conf.py
docs/source/api/: chromadvisor_pack.rst  modules.rst
notebook_2/: report_2.ipynb
notebooks/: Chromadvisor_report.ipynb  README.md  project_report.ipynb  project_report.pynb  report.ipynb  report_true.ipynb  test.ipynb  test2.ipynb  test3.ipynb
src/chromadvisor_pack/: Chromadvisor.py  Chromadvisor_without_interface.py  __init__.py  functions.py  functions_without_interface.py
tests/: Test_logP_polarity  test_display_molecule_2d.py  test_example_module.py  test_find_functional_groups.py  test_functions.py  test_functions_without_interface.py  test_get_smiles.py  test_on_submit.py
