[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Chromadvisor"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
description = "Recommend the eluant for a chromatography based on the desired molecule"
dependencies = ["pubchempy", "rdkit", "rdkit.Chem", "PIL", "tkinter", "py3Dmol", "IPython"
]
authors = [
    {name = "Vera Dias Gomes", email = "vera.diasgomes@epfl.ch"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/Squwiddly/Chromadvisor"
tracker = "https://github.com/Squwiddly/Chromadvisor/issues"

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "tox",
    "genbadge[coverage]",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx>=5",
    "sphinx-copybutton",
]

[tool.hatch.version]
path = "src/chromadvisor_pack/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/chromadvisor_pack"]

[tool.hatch.envs.default]
dependencies = ["pytest"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    '__init__.py'
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
